:bug: responsively crop, ref from https://stackoverflow.com/questions/42820520/responsively-crop-43-image-into-169

--- a/frontend/src/styles/pages/_PetProfile.scss
+++ b/frontend/src/styles/pages/_PetProfile.scss
@@ -19,7 +19,6 @@
 .image-gallery {
   width: 100%;
   height: 45vh;
-  object-fit: cover;
   margin-top: 22px;
   border-radius: 13px;
   .image-gallery-content {
@@ -29,8 +28,20 @@
       .image-gallery-slides {
         width: 100%;
         height: 45vh;
-        object-fit: cover;
         border-radius: 13px;
+        .image-gallery-slide {
+          height: 100%;
+          border-radius: 13px;
+          .image-gallery-image {
+            height: 100%;
+            width: 100%;
+            border-radius: 13px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
+        }
       }
       .image-gallery-icon:hover {
         color: $color-tiffany-300;
